fixed wrapping text

--- a/styles/base.css
+++ b/styles/base.css
@@ -179,7 +179,7 @@ nav a {
   padding: 10px 20px;
   border-radius: 10px;
   font-family: "Playfair Display", serif;
-  font-size: 2rem;
+  font-size: 1.2rem;
   text-align: center;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
 }
